--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Loja graças a Deus</title>
 </head>
 <body>
-    <h1>Loja nãoseidoque</h1>
+   <header class="cabecalho">
+    <span class="cabecalho__menu-hamburguer"></span>
+    <img src="AluraBooks/Logo." alt="">
+   </header>
 </body>
 </html>
