--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
    <header class="cabecalho">
     <span class="cabecalho__menu-hamburguer"></span>
-    <img src="AluraBooks/Logo." alt="">
+    <img src="img/Logo.svg" alt="Logo Alura">
+    <a href="#"><img src="img/Favoritos.svg" alt="Itens favoritos"></a>
+    <a href="#"><img src="img/Compras.svg" alt="Carrinho Compras"></a>
+    <a href="#"><img src="img/Usuário.svg" alt="Login Usuário"></a>
+    
    </header>
 </body>
 </html>
