--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
    <header class="cabecalho">
-    <span class="cabecalho__menu-hamburguer"></span>
-    <img src="img/Logo.svg" alt="Logo Alura">
+    <div class="container">
+        <span class="cabecalho__menu-hamburguer"></span>
+        <img src="img/Logo.svg" alt="Logo Alura">
+    </div>
     <a href="#"><img src="img/Favoritos.svg" alt="Itens favoritos"></a>
     <a href="#"><img src="img/Compras.svg" alt="Carrinho Compras"></a>
     <a href="#"><img src="img/Usuário.svg" alt="Login Usuário"></a>
