--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <link rel="stylesheet" href="style.css">
     <title>Loja graças a Deus</title>
 </head>
+
 <body>
    <header class="cabecalho">
     <div class="container">
         <span class="cabecalho__menu-hamburguer"></span>
         <img src="img/Logo.svg" alt="Logo Alura">
     </div>
-    <a href="#"><img src="img/Favoritos.svg" alt="Itens favoritos"></a>
-    <a href="#"><img src="img/Compras.svg" alt="Carrinho Compras"></a>
-    <a href="#"><img src="img/Usuário.svg" alt="Login Usuário"></a>
+    <div class="container">
+        <a href="#"><img src="img/Favoritos.svg" alt="Itens favoritos"></a>
+        <a href="#"><img src="img/Compras.svg" alt="Carrinho Compras"></a>
+        <a href="#"><img src="img/Usuário.svg" alt="Login Usuário"></a>
+    </div>
     
    </header>
 </body>
